navbar link convention

--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,9 +1,12 @@
 .header {
-    background-color: #131921
+    background-color: #131921;
+    display: flex;
+    align-items: center;
 }
 
 .header__logo {
     width: 100px;
+    object-fit: contain;
     margin-left: 20px;
     margin-right: 20px;
     /* condensed v:
@@ -11,7 +14,26 @@
     margin-top: 18px;
 }
 
+.header__search {
+    display: flex;
+    /* maximum about of space */
+    flex: 1;
+}
+
+.header__searchInput {
+    height: 12px;
+    padding: 10px;
+    border: none;
+    width: 100%;
+}
+
+.header__searchIcon {
+    padding: 5px;
+    height: 22px !important;
+    background-color: #cd9042;
+}
 
 
 /* colors */
 /* amazon blue: #131921 */
+/* search icon orange: #cd9042 */
