--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,3 +1,9 @@
+.home {
+    max-width: 1500px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .home__image {
     width: 100%;
     /* gradient */
